Implement update tasks
- convert to working with list the entire time
- fix runtime exception for accessing exception throwable during ActionProce